# VM

./: CMakeLists.txt  VM.cpp  VM.h  heap.cpp  heap.h  instructions.cpp  instructions.h  memory.cpp  memory.h  memory_model.h  register_vals.cpp  registers.h  stack.cpp  stack.h  word_types.h
instructions/: add.cpp  cmp.cpp  instructions.h  jumps.cpp  move.cpp  stack.cpp  sub.cpp
